# SDC-Project

./: .gitignore  Makefile  README.md  main.py  pyproject.toml
docs/: normalsdc.txt  project_layout.md  project_setup.md  project_testing.md
scripts/: regen_test_sdc.py
tests/integration/: placeholder copy.txt  test_archiver.py  test_viewer.py
tests/system/: test_full.py
tests/testfiles/drafts/: normalacm.json
tests/testfiles/files/: text_normal_1.txt  text_normal_2.txt  text_normal_3.txt  text_normal_4.txt
tests/testfiles/sdcs/: normalsdc-old.7z  normalsdc.7z  normalsdc.txt
tests/unit/: test_acm.py  test_sample.py
