[project]
name = "sdc-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "pytest>=9.0.2",
    "common",
    "sdc_archiver",
    "sdc_viewer"
]

[tool.uv.sources]
common = {workspace = true}
sdc_archiver = {workspace = true}
sdc_viewer = {workspace = true}

[tool.uv.workspace]
members = ["packages/*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.pyright]
extraPaths = ["src"]
typeCheckingMode = "off"
venvPath = "."
venv = ".venv"
